welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: ')' expected but ';' found.
  if(weekday == false; vacation == true){
                     ^sleepIn:2: error: ';' expected but ')' found.
  if(weekday == false; vacation == true){
                                       ^